fix 404 dark mode

--- a/docs/stylesheets/glossary-pages.css
+++ b/docs/stylesheets/glossary-pages.css
@@ -5,3 +5,6 @@ body.glossary-page h1 {
     font-weight: bold; 
 }
 
+.template-info, .info{
+    color:black
+}
