--- a/docs/stylesheets/modal.css
+++ b/docs/stylesheets/modal.css
@@ -10,10 +10,10 @@
 }
 
 .modal-content {
-    background-color:#E0E0E0; 
-    border: 1px solid #e0e0e0;  
+    background-color: #FFFFFF; 
+    border: 1px solid #e0e0e0;
     border-radius: 4px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 100%;
     transition: opacity 0.25s ease;
